[package]
name = "unperceive"
version = "0.1.0"
authors = ["lain || Xavier Fernandez <xavier.fernandez92@myhunter.cuny.edu>"]
edition = "2018"
license = "MIT" 
repository = "https://github.com/Xavulu/unperceive"
description = "something maybe but not today :)"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
paris = "1.5"  
file_shred = "1.1.0"  
tracing = "0.1.22" 
color-eyre = "0.5" 
tensorflow = "0.16.0" 
image = "0.21.0"
imageproc = "0.18.0"

[[bin]]
name = "unperceive"
test = false 
bench = false